--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<section class="esquerda">
 			<figure>
-				<img src="img/retrato.jpg" width="200px">
+				<img src="img/retrato.jpg" width="200px" height="200px">
 				<figcaption>
 					<h1>KAFRI FOTO</h1>
 			        <p>Lembra-se de pequenas coisas, muito depois de ter esquecido.</p>
